# fpl-optimizer

./: CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: fpl.db  main.py  requirements.txt
backend/api/: gameweek.py  optimizer.py  players.py
backend/data/: fpl_fetcher.py
backend/services/: optimizer.py
fpl_optimizer/: __init__.py  cli.py  service.py
fpl_optimizer/analysis/: __init__.py  fixture_analyzer.py  points_predictor.py
fpl_optimizer/data/: __init__.py  fetcher.py
fpl_optimizer/models/: __init__.py  player.py
fpl_optimizer/optimizer/: __init__.py  squad_optimizer.py
fpl_optimizer/recommendations/: __init__.py  captain.py  chips.py  transfers.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/pages/: Analytics.jsx  Captain.jsx  ChipAdvisor.jsx  Differentials.jsx  Players.jsx  PriceChanges.jsx  Transfers.jsx
tests/: __init__.py  test_captain.py  test_chips.py  test_fetcher.py  test_fixture_analyzer.py  test_player_model.py  test_points_predictor.py  test_squad_optimizer.py
